--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
     <link rel="stylesheet" href="style.css" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <h1>Hi lol</h1>
+  </body>
 </html>
