přidání textu v HTML, style.css h1 přidání font-size

--- a/index.html
+++ b/index.html
@@ -9,5 +9,8 @@
   </head>
   <body>
     <h1>Hi lol</h1>
+    <p>
+      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Temporibus, nam.
+    </p>
   </body>
 </html>
